// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente GifGid debe de coincidir el SnapShot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Rick and Morty
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas en el componente GifGid debe de mostrar items cuando se cargan imágenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Rick and Morty
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abc"
      key="abc"
      title="Cualquier cosa"
      url="http://localhost"
    />
    <GifGridItem
      id="123"
      key="123"
      title="Cualquier cosa 2"
      url="http://localhost"
    />
  </div>
</Fragment>
`;
